Adding last project

--- a/DataAnalysisClassNotes/stats_logistic_regression_fitting.ipynb
+++ b/DataAnalysisClassNotes/stats_logistic_regression_fitting.ipynb
@@ -118,11 +118,81 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>day</th>\n",
+       "      <th>fraud</th>\n",
+       "      <th>weekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28891</td>\n",
+       "      <td>21.302600</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61629</td>\n",
+       "      <td>22.932765</td>\n",
+       "      <td>weekend</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>53707</td>\n",
+       "      <td>32.694992</td>\n",
+       "      <td>weekday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   transaction_id   duration      day  fraud  weekday\n",
+       "0           28891  21.302600  weekend      0        0\n",
+       "1           61629  22.932765  weekend      0        0\n",
+       "2           53707  32.694992  weekday      0        1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['weekday'] = pd.get_dummies(df['day'])['weekday']\n",
     "df[['not_fraud','fraud']] = pd.get_dummies(df['fraud'])\n",
-    "df = df.drop('not_fraud', axis=1)"
+    "df = df.drop('not_fraud', axis=1)\n",
+    "df.head(3)"
    ]
   },
   {
