--- a/DataAnalysisClassNotes/stats_logistic_regression_interpreting_results.ipynb
+++ b/DataAnalysisClassNotes/stats_logistic_regression_interpreting_results.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -305,10 +305,10 @@
        "  <th>Method:</th>               <td>MLE</td>       <th>  Df Model:          </th>  <td>     5</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Thu, 18 Oct 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.08166</td> \n",
+       "  <th>Date:</th>          <td>Mon, 29 Oct 2018</td> <th>  Pseudo R-squ.:     </th>  <td>0.08166</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>10:31:21</td>     <th>  Log-Likelihood:    </th> <td> -227.82</td> \n",
+       "  <th>Time:</th>              <td>14:41:49</td>     <th>  Log-Likelihood:    </th> <td> -227.82</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>           <td>True</td>       <th>  LL-Null:           </th> <td> -248.08</td> \n",
@@ -349,8 +349,8 @@
        "Dep. Variable:                  admit   No. Observations:                  397\n",
        "Model:                          Logit   Df Residuals:                      391\n",
        "Method:                           MLE   Df Model:                            5\n",
-       "Date:                Thu, 18 Oct 2018   Pseudo R-squ.:                 0.08166\n",
-       "Time:                        10:31:21   Log-Likelihood:                -227.82\n",
+       "Date:                Mon, 29 Oct 2018   Pseudo R-squ.:                 0.08166\n",
+       "Time:                        14:41:49   Log-Likelihood:                -227.82\n",
        "converged:                       True   LL-Null:                       -248.08\n",
        "                                        LLR p-value:                 1.176e-07\n",
        "==============================================================================\n",
@@ -366,7 +366,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -446,13 +446,13 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/_"
+    "1/np.exp(results.params)"
    ]
   },
   {
